Fixed little things

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <header role="banner">
 
-	<h1>LibChat to Summon</h1>
+	<h1><a href="index.html">LibChat to Summon</a></h1>
 
 	<p class="subtitle">Easily get your LibChat into Summon 2.0</p>
 
