Updated Dev Tools helps

--- a/index.html
+++ b/index.html
@@ -83,13 +83,7 @@
 		</li>
 		<li>Now open up a new window or tab in your browser and go to your library's Summon site. Do a search so that you have a sceen with some results, like this:<br />
 			<img src="img/summonresults.png" alt="Summon results screen" /></li>
-		<li>I want you to open up your browser's "Developer Tools Console." In most browsers, you can right-click on the web page and click "Inspect Element," and then click the "Console" link. If you need help finding it, select your browser below and I'll show you where to find it:
-			<ul class="browsers">
-				<li id="chrome">Chrome</li>
-				<li id="firefox">Firefox</li>
-				<li id="safari">Safari</li>
-				<li id="Ie">Internet Explorer</li>
-			</ul>
+		<li>I want you to open up your browser's "Developer Tools Console." In most browsers, you can right-click on the web page and click "Inspect Element," and then click the "Console" link. If you need help finding it, head over to <a href="https://thatandromeda.github.io/courseware/Intro-via-jQuery/intro.html">Andromeda Yelton's Excellent Intro to Programming</a> page and look over her tips for finding yoru Developer Tools Console. I'll wait!
 		</li>
 		<li>You should see a chevron in the console with a cursor next to it. I want you to click next to that chevron and then paste the code you copied earlier. You can press Ctrl-V for that. Once you've pasted the code, hit enter.</li>
 		<li>Now move the Developer Tools window so you can see your Summon site. Do you have a chat button in the upper right hand corner, like this:<br />
